11Jun00=======================================================================
1. removed extraneous DXDebug from DXUtil
10Jun00=======================================================================
1. got rid of some more nasty bugs in sh/qra.
2. fixed 9A3xx to always be Croatia (and not Haiti!).
09Jun00=======================================================================
1. change some print commands in DXMsg to dbg('err'...
2. overloaded confess, croak et al into DXDebug and removed Carp from 
everywhere and checked that the necessary debugging really does go into
the debug files now.
3. changed print statements in cluster.pl to dbg('err',... so they go into
the debug files as well.
4. Altered the logic around duplicate spots, reduced the length of comment
checked to 20 characters (this should solve some problems including those
people sucking ar-cluster spots with prefixes in the extreme rh end). 
08Jun00=======================================================================
1. fixed problem with binary characters from cluster->client
2. added set/echo and unset/echo commands
3. echo login characters on login: prompt for C client
4. Send \r\n on telnet connections for C Client
5. Make echoing the default option (for M$ telnet clients :-()
11May00=======================================================================
1. fixed looping in Msg.pm (at last)
10May00=======================================================================
1. wrote a cross between 'tail -f' and grepdbg so that you can watch the
debug files for particular strings and only have them print out. 
05May00=======================================================================
1. rewrote parts of Msg.pm and client.c so that the messages no longer use
a length word at the front of each one. They are simply strings of characters
separated by a \n. No binary characters are allowed (they are encoded as %nn)
a la HTTP. This hopefully cures Arnold's problem and also make it more