@@ -100,6 +100,7 @@ if (grep $_ eq $spotted, @DXProt::baddx) {
 	my $buf = Spot::formatb($freq, $spotted, $main::systime, $line, $spotter);
 	push @out, $buf;
 } else {
+	return (1, $self->msg('dup')) if Spot::dup($freq, $spotted, $main::systime, $line);
 	my @spot = Spot::add($freq, $spotted, $main::systime, $line, $spotter, $main::mycall);
 	if (@spot) {
 		# send orf to the users
@@ -108,3 +109,8 @@ if (grep $_ eq $spotted, @DXProt::baddx) {
 }
 
 return (1, @out);
+
+
+
+
+
